force-app/main/default/objects/Material_Log__c/Material_Log__c.object-meta.xml
<CustomObject>
    <description>Material and cost log entries attached to WBS items.</description>
    <label>Material Log</label>
    <nameField>
        <displayFormat>ML-{0000}</displayFormat>
        <label>Material Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>