force-app/main/default/objects/Material_Log__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
                <default>true</default>
                <label>Material</label>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>