force-app/main/default/objects/Material_Log__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>