force-app/main/default/objects/Material_Log__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Material Logs</relationshipLabel>
    <relationshipName>Material_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>